--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".report4"
+            android:exported="true" />
+        <activity
+            android:name=".report2"
+            android:exported="true" />
+        <activity
             android:name=".report"
             android:exported="true" />
         <activity
